deploy/ha/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-server-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://docs.traefik.io/routing/providers/kubernetes-ingress/
    traefik.ingress.kubernetes.io/router.tls: "true"
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  # https://docs.traefik.io/v1.7/user-guide/kubernetes/#add-a-tls-certificate-to-the-ingress
  tls:
  #- secretName: silkrode-in-tls # Works!
  - secretName: silkrode-in-tls-2
    hosts:
      - vault.silkrode.in
  - secretName: gcp-silkrode-com-tw-tls-1
    hosts:
      - vault.gcp.silkrode.com.tw
  rules:
  - host: vault.silkrode.in
    http:
      paths:
      - path: /ui
        backend:
          serviceName: vault-ui
          servicePort: 8200
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
  - host: vault.gcp.silkrode.com.tw
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
