deploy/ha/traefik-ingress-route-tcp.yaml
# https://docs.traefik.io/routing/providers/kubernetes-crd/#kind-ingressroutetcp
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault-tcp
  namespace: vault
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostSNI(`vault.silkrode.in/ui`) #&& Path(`/ui`)
      kind: Rule
      services:
      - name: vault-ui
        port: 8200
    - match: HostSNI(`vault.silkrode.in`)
      kind: Rule
      services:
      - name: vault
        port: 8200
    - match: HostSNI(`vault.gcp.silkrode.com.tw`)
      kind: Rule
      services:
      - name: vault
        port: 8200
  tls:
    passthrough: true
